2004-10-25  Roger Leigh <rleigh@debian.org>
 
 	* build_shared/Makefile_build.am_fragment: Use PLATFORM_WIN32
 	rather than OS_WIN32 so that -no-undefined is used on Cygwin
 	as well as MinGW toolchains.

2004-10-25  Murray Cumming  <murrayc@murrayc.com>

	* gtk/gtkmm.h: #include filechooserwidget.h, as suggested in bug 
	#156170 from Arjan Timmerman.

2004-10-24  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/gtkmm-tut.xml: Updated the menus and toolbars section 
	about UIManager, though the popup example does not work yet, and I 
	should mention ui merging and toggle items.

2004-10-22  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/treemodelfilter.hg: _WRAP_CTOR: Rename root parameter to 
 	virual_root so that it sets the correct property.
 
2004-10-22  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/treeiter.hg: In ifdef, use SUN-Forte-style reverse_iterator. 
 	Patch from TODO in bug #154973. 

2004-10-22  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/aboutdialog.hg: Wrap the get and set methods that deal with 
	char** arrays, using Glib::SArrayHandle. Wrap the callback set 
	methods with a SignalProxy.
	* gtk/src/gtk_signals.defs: Add signals and properties for 
	AboutDialog and MenuToolButton.
	* tools/extra_defs_gen/generate_defs_gtk.cc: Get defs for 
	GtkAboutDialog and GtkMenuToolButton.
	* gtk/src/action_group.hg: Add translate_string(). We probably need to 
	use iit in the .ccg file.
	* gtk/src/icontheme.hg: Added get_icon_sizes().
	* gtk/src/iconview.hg: Added get_selected_items().
	* tools/m4/convert_gtk.m4: Added conversion for SArrayHandle to char**,
	and GList* to SListHandle<TreePath>

2004-10-17  Gene Ruebsamen  <gene@erachampion.com>

 	* docs/tutorial/gtkmm-tut.xml: Updated the Windows installation
 	appendix by providing a link to the latest Gtk+ Win32 installer, 
 	and updating the installation instructions.

2004-10-12  Murray Cumming  <murrayc@murrayc.com>
