@@ -7,12 +7,13 @@ figures_DATA = alignment.png aspectframe.png \
 	buttonbox.png buttons.png checkbutton.png \
 	clipboard_simple.png clipboard_ideal.png \
 	combo.png custom_container.png \
-	dialogs_colorselectiondialog.png dialogs_fileselection.png dialogs_fontselectiondialog.png dialogs_messagedialog.png dialogs_simple.png \
-  drag_and_drop.png drawingarea_lines.png drawingarea_text.png \
-  entry.png eventbox.png frame.png \
+	dialogs_colorselectiondialog.png dialogs_filechooser.png dialogs_fontselectiondialog.png \
+	dialogs_messagedialog.png dialogs_simple.png \
+	drag_and_drop.png drawingarea_lines.png drawingarea_text.png \
+	entry.png eventbox.png frame.png \
 	helloworld.png helloworld2.png label.png \
 	main_menu.png menu_popup.png \
-  menus_menubar.png menus_menu.png \
+	menus_menubar.png menus_menu.png \
 	notebook.png \
 	paned.png progressbar.png radiobuttons.png \
 	range_widgets.png scrolledwindow.png spinbutton.png \
