@@ -3565,26 +3565,28 @@ This is a convenience class, used to create simple, standard message dialogs, wi
 
 </sect1>
 
-<sect1><title>FileSelection</title>
+<sect1><title>FileChooserDialog</title>
 <para>
-This dialog allows the user to choose a file or folder. For instance, it is used when saving or loading documents.
+This dialog is suitable for use with &quot;Open&quot; or &quot;Save&quot; menu items. 
+</para>
+<para>
+Most useful member methods for this class are actually in the Gtk::FileChooser base class.
 </para>
 
-<para><ulink url="&url_refdocs_base_gtk;FileSelection.html">Reference</ulink></para>
+<para><ulink url="&url_refdocs_base_gtk;FileChooserDialog.html">Reference</ulink></para>
 
 <sect2>
 <title>Example</title>
 
-<figure id="figure-dialogs-fileselection">
-  <title>FileSelection</title>
+<figure id="figure-dialogs-filechooser">
+  <title>FileChooser</title>
   <screenshot>
-    <graphic format="PNG" fileref="&url_figures_base;dialogs_fileselection.png"/>
+    <graphic format="PNG" fileref="&url_figures_base;dialogs_filechooser.png"/>
   </screenshot>
 </figure>
 
-<para><ulink url="&url_examples_base;dialogs/fileselection">Source Code</ulink></para>
+<para><ulink url="&url_examples_base;dialogs/filechooserdialog">Source Code</ulink></para>
 </sect2>
-
 </sect1>
 
 <sect1><title>ColorSelectionDialog</title>
