@@ -1,3 +1,10 @@
+2004-10-16  Gene Ruebsamen  <gene@erachampion.com>
+ 
+ 	* docs/tutorial/gtkmm-tut.xml: Added a chapter for the new gtk-2.4 
+ 	FileChooserDialog.
+ 	* docs/tutorial/figures/dialogs_filechooser.png: Added a PNG image
+ 	of the new FileChooserDialog.
+
 2004-10-25  Roger Leigh <rleigh@debian.org>
  
  	* build_shared/Makefile_build.am_fragment: Use PLATFORM_WIN32
